// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component renders 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100vh;
  width: unset;
  font-size: 30px;
  -webkit-animation-name: fade;
  animation-name: fade;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`ComponentInline renders and defaults to a div 1`] = `
.emotion-0 {
  color: #454545;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`ComponentLink should receive href props 1`] = `
.emotion-0 {
  color: #454545;
}

<div>
  <a
    class="emotion-0"
    href="https://sancho.dev"
  />
</div>
`;

exports[`ComponentLink should render an <a /> tag 1`] = `
.emotion-0 {
  color: #454545;
}

<div>
  <a
    class="emotion-0"
  />
</div>
`;

exports[`StyledInput renders and self-closing element (whithout children) 1`] = `
.emotion-0 {
  color: #454545;
}

<div>
  <input
    class="emotion-0"
  />
</div>
`;
